--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<footer>
 			<div class="container">
 				<div class="col-sm-12">
-					<p class="text-center">@handbookeof &copy; 2018</p>
+					<p class="text-center"><a href="https://twitter.com/handbookeof" target="_blank">@handbookeof</a> &copy; 2018</p>
 				</div>
 			</div>
 		</footer>
