Template minor update

--- a/about.html
+++ b/about.html
@@ -26,14 +26,14 @@
 				<div class="collapse navbar-collapse " id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
 					<li>
-						<a class="navbar-brand mr-auto" href="#"><img src="res/img/dinosource-egg-h.png"/></a>
+						<a class="navbar-brand mr-auto" href="index.html"><img src="res/img/dinosource-egg-h.png"/></a>
 					</li>
 					</ul>
 					<ul class="navbar-nav mr-5 pr-5">
-							<li class="nav-item active">
-									<a class="nav-link" href="#">Home</a>
-								</li>
 								<li class="nav-item">
+									<a class="nav-link" href="index.html">Home</a>
+								</li>
+								<li class="nav-item active">
 									<a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
 								</li>
 								<li class="nav-item">
