--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="#">Localization</a>
-									<a class="dropdown-item" href="#">Professor Raptor</a>
-									<a class="dropdown-item" href="#">Printable</a>
+									<!-- a class="dropdown-item" href="#">Professor Raptor</a -->
+									<!-- a class="dropdown-item" href="#">Printable</a -->
 									<a class="dropdown-item" href="#">Guardian</a>
 								</div>
 							</li>
@@ -61,24 +61,34 @@
 
 		<main>
 			<div class="container">
-
+				<!-- ADA MASALAH MOBILE FRIENDLY DI TABLE, COBA PERIKSA BOOTSTRAP -->
 				<div class="text-center">
 					<h1 class="text-center"><strong>Welcome to </strong><img src="res/img/dinosource-egg-h.png" style="max-height: 2rem;"/>!</h1>
 					<p>A place of tons resources</p>
 				</div>
 				
 				<div class="w-100"></div>
+				<!-- COL-12 NYA BAGUSAN DI LUAR TABLE APA DI TABLE??? -->
+
+				<div class='dino-table col-12 col-sm-12 col-md-12' id="islam">
+					<script>islamDB();</script>
+				</div>
+	
+				<div class="w-100"></div>
+				<br/><br/>
 
 				<div class='dino-table col-12 col-sm-12 col-md-12' id="downloadable">
 					<script>dwnDB();</script>
 				</div>
 	
+				<div class="w-100"></div>
 				<br/><br/>
 	
 				<div class='dino-table col-12 col-sm-12 col-md-12' id="read">
 					<script>redDB();</script>
 				</div>
 	
+				<div class="w-100"></div>
 				<br/><br/>
 	
 				<div class='dino-table col-12 col-sm-12 col-md-12' id="academic">
@@ -103,6 +113,7 @@
 		<!-- JQuery Script Custom-->
 		<script>
 			$(document).ready(function(){
+				$('.dino-table').addClass('table-responsive');
 				$('.dino-table > table').addClass('table table-striped table-dark');
 				//var tlink = $( ".dino-table table tbody tr td:nth-child(2)").text();
 				$( ".dino-table table tbody tr td:nth-child(2)" ).each(function(){
