theme color for mobile tab browser

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta >
+		<meta name="theme-color" content="#1a1a1a">
 
 		<link rel="icon" href="res/img/egg-of-dino-ico.png" type="image/png"/>
 
