minor layout change

--- a/index.html
+++ b/index.html
@@ -61,38 +61,39 @@
 
 		<main>
 			<div class="container">
-				<!-- ADA MASALAH MOBILE FRIENDLY DI TABLE, COBA PERIKSA BOOTSTRAP -->
 				<div class="text-center">
 					<h1 class="text-center"><strong>Welcome to </strong><img src="res/img/dinosource-egg-h.png" style="max-height: 2rem;"/>!</h1>
 					<p>A place of tons resources</p>
 				</div>
 				
-				<div class="w-100"></div>
-				<!-- COL-12 NYA BAGUSAN DI LUAR TABLE APA DI TABLE??? -->
+				<div class="col-12 col-sm-12 col-md-12">
+					<div class="w-100"></div>
+					<!-- COL-12 NYA BAGUSAN DI LUAR TABLE APA DI TABLE??? -->
 
-				<div class='dino-table col-12 col-sm-12 col-md-12' id="islam">
-					<script>islamDB();</script>
-				</div>
-	
-				<div class="w-100"></div>
-				<br/><br/>
+					<div class='dino-table' id="islam">
+						<script>islamDB();</script>
+					</div>
 
-				<div class='dino-table col-12 col-sm-12 col-md-12' id="downloadable">
-					<script>dwnDB();</script>
-				</div>
-	
-				<div class="w-100"></div>
-				<br/><br/>
-	
-				<div class='dino-table col-12 col-sm-12 col-md-12' id="read">
-					<script>redDB();</script>
-				</div>
-	
-				<div class="w-100"></div>
-				<br/><br/>
-	
-				<div class='dino-table col-12 col-sm-12 col-md-12' id="academic">
-					<script>acdDB();</script>
+					<div class="w-100"></div>
+					<br/><br/>
+
+					<div class='dino-table' id="downloadable">
+						<script>dwnDB();</script>
+					</div>
+
+					<div class="w-100"></div>
+					<br/><br/>
+
+					<div class='dino-table' id="read">
+						<script>redDB();</script>
+					</div>
+
+					<div class="w-100"></div>
+					<br/><br/>
+
+					<div class='dino-table' id="academic">
+						<script>acdDB();</script>
+					</div>
 				</div>
 			</div>
 		</main>
