--- a/lessons/index.html
+++ b/lessons/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="theme-color" content="#1a1a1a">
 
-		<link rel="icon" href="res/img/egg-of-dino-ico.png" type="image/png"/>
+		<link rel="icon" href="../res/img/egg-of-dino-ico.png" type="image/png"/>
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel="stylesheet" href="src/css/style.css" />
+		<link rel="stylesheet" href="../src/css/style.css" />
 		
 		<title>Welcome to DinoSource</title>
 	
@@ -29,18 +29,18 @@
 					<div class="collapse navbar-collapse " id="navbarSupportedContent">
 						<ul class="navbar-nav mr-auto">
 						<li>
-							<a class="navbar-brand mr-auto" href="index.html"><img src="res/img/dinosource-egg-h.png"/></a>
+							<a class="navbar-brand mr-auto" href="../index.html"><img src="../res/img/dinosource-egg-h.png"/></a>
 						</li>
 						</ul>
 						<ul class="navbar-nav ml-5 pl-5">
+							<li class="nav-item">
+								<a class="nav-link" href="../index.html">Home</a>
+							</li>
 							<li class="nav-item active">
-								<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+								<a class="nav-link" href="../lessons">Lessons<span class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="lessons">Lessons</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="about.html">About</a>
+								<a class="nav-link" href="../about.html">About</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">Download</a>
@@ -50,7 +50,7 @@
 								Projects
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="locals">Localization</a>
+									<a class="dropdown-item" href="../locals">Localization</a>
 									<!-- a class="dropdown-item" href="#">Professor Raptor</a -->
 									<!-- a class="dropdown-item" href="#">Printable</a -->
 									<a class="dropdown-item" href="#">Guardian</a>
@@ -64,39 +64,7 @@
 
 		<main>
 			<div class="container">
-				<div class="text-center">
-					<h1 class="text-center"><strong>Welcome to </strong><img src="res/img/dinosource-egg-h.png" style="max-height: 2rem;"/>!</h1>
-					<p>A place of tons resources</p>
-				</div>
-				
-				<div class="col-12 col-sm-12 col-md-12">
-					<div class="w-100"></div>
-
-					<div class='dino-table' id="islam">
-						<script>islamDB();</script>
-					</div>
-
-					<div class="w-100"></div>
-					<br/><br/>
-
-					<div class='dino-table' id="downloadable">
-						<script>dwnDB();</script>
-					</div>
-
-					<div class="w-100"></div>
-					<br/><br/>
-
-					<div class='dino-table' id="read">
-						<script>redDB();</script>
-					</div>
-
-					<div class="w-100"></div>
-					<br/><br/>
-
-					<div class='dino-table' id="academic">
-						<script>acdDB();</script>
-					</div>
-				</div>
+				<a href="webdev">Web Development</a>
 			</div>
 		</main>
 
