--- a/team.html
+++ b/team.html
@@ -14,7 +14,7 @@
 		
 		<title>Welcome to DinoSource</title>
 	
-		<script src="src/js/dinoSource.js"></script>
+		<script src="src/js/dinoTeam.js"></script>
 	</head>
 	<body>
 
@@ -37,9 +37,6 @@
 								<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="lessons">Lessons</a>
-							</li>
-							<li class="nav-item">
 								<a class="nav-link" href="about.html">About</a>
 							</li>
 							<li class="nav-item">
@@ -50,7 +47,7 @@
 								Projects
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="locals">Localization</a>
+									<a class="dropdown-item" href="#">Localization</a>
 									<!-- a class="dropdown-item" href="#">Professor Raptor</a -->
 									<!-- a class="dropdown-item" href="#">Printable</a -->
 									<a class="dropdown-item" href="#">Guardian</a>
@@ -64,39 +61,7 @@
 
 		<main>
 			<div class="container">
-				<div class="text-center">
-					<h1 class="text-center"><strong>Welcome to </strong><img src="res/img/dinosource-egg-h.png" style="max-height: 2rem;"/>!</h1>
-					<p>A place of tons resources</p>
-				</div>
 				
-				<div class="col-12 col-sm-12 col-md-12">
-					<div class="w-100"></div>
-
-					<div class='dino-table' id="islam">
-						<script>islamDB();</script>
-					</div>
-
-					<div class="w-100"></div>
-					<br/><br/>
-
-					<div class='dino-table' id="downloadable">
-						<script>dwnDB();</script>
-					</div>
-
-					<div class="w-100"></div>
-					<br/><br/>
-
-					<div class='dino-table' id="read">
-						<script>redDB();</script>
-					</div>
-
-					<div class="w-100"></div>
-					<br/><br/>
-
-					<div class='dino-table' id="academic">
-						<script>acdDB();</script>
-					</div>
-				</div>
 			</div>
 		</main>
 
