web dev lesson column

--- a/lessons/webdev/index.html
+++ b/lessons/webdev/index.html
@@ -106,8 +106,8 @@
 				</div>
 
 				<div class="row">
-					<div class="col-2 col-sm-2"></div>
-					<div class="col-8 col-sm-8">
+					<div class="col-sm-2"></div>
+					<div class="col-12 col-sm-8">
 						<ul class="list-unstyled">
 							<li class="media my-2">
 								<img class="align-self-center mr-3" src="holder.js/150x150" alt="Generic placeholder image">
