--- a/sources/index.html
+++ b/sources/index.html
@@ -134,7 +134,9 @@
 </div>
 
 <div class="container">
-    <script src="/assets/js/linkSource.js"></script>
+    
+        <script src="/dinosource/assets/js/linkSource.js"></script>
+    
     <div class="row px-5">
         <div class="col-1 col-sm-1"></div>
         <div class="col-10 col-sm-10 col-md-10">
