--- a/sources/index.html
+++ b/sources/index.html
@@ -115,7 +115,7 @@
         <div class="col-1 col-sm-1"></div>
         <div class="col-10 col-sm-10 mx-auto">
             
-                <a id="dinoHead" href="/dinosource"><img class="img-fluid" src="/dinosource/assets/images/dinosource-egg-h.png"/></a>
+                <!-- a id="dinoHead" href="/dinosource" --><img class="img-fluid" src="/dinosource/assets/images/dinosource-egg-h.png"/><!-- /a -->
             
         </div>
     </div>
